# pape

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
pape/: __main__.py  arxiv_client.py  cli.py  search.py  storage.py  utils.py
